# images

./: LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
backend-base/: Dockerfile  pyproject.toml  requirements.txt
bbot/: Dockerfile  bbot.yml  pyproject.toml  requirements.txt
temporal-server/: Dockerfile  docker.yaml  dynamic_config.yaml  entrypoint.sh
temporal-ui/: Dockerfile
zitadel/: Dockerfile
