[project]
name = "ciso360ai-backend-base"
version = "0.0.0"
description = "CISO360AI backend base image — runtime Python dependencies"
requires-python = ">=3.14,<3.15"
# Runtime dependencies only — no test frameworks (production base image).
# Mirrors ciso360ai/ciso360ai backend/pyproject.toml runtime section.
dependencies = [
    # Core web framework
    "fastapi",
    "uvicorn",
    "email-validator",

    # Database
    "surrealdb==2.0.0",

    # Authentication & security
    "python-jose",
    "passlib[bcrypt]",
    "bcrypt",
    "argon2-cffi",

    # Environment & configuration
    "python-dotenv",
    "python-dateutil>=2.8.0",

    # HTTP clients
    "httpx[http2]",
    "aiohttp",

    # Data processing
    "python-multipart",
    "jsonpath-ng",

    # Workflow orchestration
    "temporalio",

    # Payment integration
    "stripe>=15,<16",

    # Report generation (CSV and PDF)
    "reportlab",

    # Snyk-pinned transitive vulnerability floors
    # (kept here because parent packages allow older vulnerable versions)
    "pyasn1>=0.6.3",
    "starlette>=1.0.0",
    "requests>=2.32.4",
    "urllib3>=2.6.3",
    "dnspython>=2.8.0",
]

[tool.uv]
package = false
