[project]
name = "ciso360ai-bbot"
version = "0.0.0"
description = "CISO360AI BBOT worker image — runtime Python dependencies"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiohttp",
    "fastapi",
    "httpx[http2]",
    "psutil",
    "python-dotenv",
    "surrealdb==2.0.0",
    "temporalio",
    "uvicorn",

    # bbot — pinned to the python-support-3-14 dev branch (replaces extractous with kreuzberg).
    # Concrete commit + URL declared under [tool.uv.sources] for reproducibility.
    "bbot",
]

[tool.uv]
package = false

[tool.uv.sources]
bbot = { git = "https://github.com/blacklanternsecurity/bbot", rev = "5be49934b1ddd9835f1cb768ef4e0510c466c99d" }
